Renamed almost everything

--- a/doc/viaphpfs.1
+++ b/doc/viaphpfs.1
@@ -1,25 +1,22 @@
-.TH curlftpfs 1 "25 May 2007" "CurlFtpFS 0.9.2" "CurlFtpFS Manual"
+.TH viaphpfs 1 "5 August 2013" "ViaPhpFS 0.0.1" "ViaPhpFS Manual"
 .SH NAME
-curlftpfs \- mount a ftp host as a local directory
+viaphpfs \- mount a viaphpfs host as a local directory
 .SH SYNOPSIS
-.B curlftpfs [options]
+.B viaphpfs [options]
 .I host path
 .SH DESCRIPTION
 The program
-.B curlftpfs
-is a tool to mount remote ftp hosts as local directories. It connects to the
-.I host
-FTP server and maps its directory structure to the
-.I path
-directory.
+.B viaphpfs
+is a tool to mount remote viaphpfs hosts as local directories.
+TODO
 
-curlftpfs is powered by libcurl for all transfer-related features. See
+viaphpfs is powered by libcurl for all transfer-related features. See
 .BR libcurl (3)
 for details. The filesystem part is implemented on top of FUSE.
 See
 .BR http://fuse.sourceforge.net/
 for details.
-.SH FTP OPTIONS
+.SH HTTP OPTIONS
 .TP
 .B "-h/--help"
 Print help options.
@@ -28,7 +25,7 @@ Print help options.
 Make libcurl print verbose debug output.
 .TP
 .B "-V/--version"
-Print curlftpfs, libcurl and fuse versions.
+Print viaphpfs, libcurl and fuse versions.
 .TP
 .B \-o
 Options are specified with a
@@ -45,19 +42,19 @@ libcurl's cacert bundle is assumed to be stored, as  established
 at build time.
 .TP
 .B capath=<directory>
-(SSL) Tells curlftpfs to use the specified certificate directory to verify the
+(SSL) Tells viaphpfs to use the specified certificate directory to verify the
 peer. The certificates must be in PEM format, and the directory must have been
 processed using  the  c_rehash  utility supplied  with  openssl.  Using
-\fBcapath\fP can allow curlftpfs to make connections much more
+\fBcapath\fP can allow viaphpfs to make connections much more
 efficiently than using  \fBcacert\fP  if the \fBcacert\fP file contains many CA
 certificates.
 .TP
 .B cert=<certificate>
-(SSL) Tells curlftpfs to use the specified certificate file. The default format
+(SSL) Tells viaphpfs to use the specified certificate file. The default format
 is "PEM" and can be changed with \fBcert_type\fP.
 .TP
 .B cert_type=<type>
-(SSL) Tells curlftpfs what certificate type the provided certificate is in.
+(SSL) Tells viaphpfs what certificate type the provided certificate is in.
 PEM, DER and ENG are recognized types.
 .TP
 .B ciphers=<list of ciphers>
@@ -73,32 +70,32 @@ Read up on SSL cipher list details
 on this URL: \fIhttp://www.openssl.org/docs/apps/ciphers.html\fP
 .TP
 .B codepage=<name>
-Sets the encoding the ftp server uses to encode file names.
+Sets the encoding the http server uses to encode file names.
 .TP
 .B connect_timeout=<seconds>
 Maximum time in seconds that you allow the connection to the server to take.
-This only limits the connection phase, once curlftpfs has connected this option
+This only limits the connection phase, once viaphpfs has connected this option
 is of no more use.
 .TP
 .B custom_list=<command>
-Command used by curlftpfs to list files. The default is "LIST -a" but some
+Command used by viaphpfs to list files. The default is "LIST -a" but some
 servers might require extra options, e.g. "LIST -la".
 .TP
 .B disable_eprt
-Tell curlftpfs to disable the use of the EPRT and LPRT commands when doing
-active FTP transfers. Curlftpfs will normally always first attempt to use EPRT,
+Tell viaphpfs to disable the use of the EPRT and LPRT commands when doing
+active HTTP transfers. Viaphpfs will normally always first attempt to use EPRT,
 then LPRT before using PORT, but with this option, it will use PORT right
-away. EPRT and LPRT are extensions to the original FTP protocol, may not work
+away. EPRT and LPRT are extensions to the original HTTP protocol, may not work
 on all servers but enable more functionality in a better way than the
 traditional PORT command.
 .TP
 .B disable_epsv
-Tell curlftpfs to disable the use of the EPSV command when doing passive FTP
+Tell viaphpfs to disable the use of the EPSV command when doing passive HTTP
 transfers. This is the default.
 .TP
 .B enable_epsv
-Tell curlftpfs to enable the use of the EPSV command when doing passive FTP
-transfers. Curlftpfs will first attempt to use EPSV before PASV.
+Tell viaphpfs to enable the use of the EPSV command when doing passive HTTP
+transfers. Viaphpfs will first attempt to use EPSV before PASV.
 .TP
 .B engine=<name>
 Select  the  OpenSSL crypto engine to use for cipher operations.  Use: 
@@ -108,28 +105,28 @@ Select  the  OpenSSL crypto engine to use for cipher operations.  Use:
 to  print  a  list  of  build-time  supported engines.  Note  that  not
 all  (or  none) of the engines may be available at run-time.
 .TP
-.B ftpfs_debug
-Make curlftpfs print lots of debug information. Useful only in conjunction with
+.B viapfs_debug
+Make viaphpfs print lots of debug information. Useful only in conjunction with
 the
 .B \-d
 option.
 .TP
-.B ftp_method=<method>
-Control what method curlftpfs should use to reach a file on the
+.B http_method=<method>
+Control what method viaphpfs should use to reach a file on the
 server. The method argument should be one of the following alternatives:
 .RS
 .IP multicwd
-curlftpfs does a single CWD operation for each path part in the given URL. For
+viaphpfs does a single CWD operation for each path part in the given URL. For
 deep hierarchies this means very many commands. This is how RFC1738 says it
 should be done. This is the default but the slowest behavior.
 .IP singlecwd
-curlftpfs does one CWD with the full target directory and then operates on the
+viaphpfs does one CWD with the full target directory and then operates on the
 file \&"normally" (like in the multicwd case). 
 .RE
 .TP
-.B ftp_port=<address>
-Reverses the initiator/listener roles when connecting with ftp. This
-switch makes curlftpfs use the PORT command instead of PASV. In practice, PORT
+.B http_port=<address>
+Reverses the initiator/listener roles when connecting with http. This
+switch makes viaphpfs use the PORT command instead of PASV. In practice, PORT
 tells the server to connect to the client's specified address and port, while
 PASV asks the server for an ip address and port to connect to. <address>
 should be one of:
@@ -141,7 +138,7 @@ i.e "192.168.10.1" to specify exact IP number
 .IP "host name"
 i.e "my.host.domain" to specify machine
 .IP "-"
-make curlftpfs pick the same IP address that is already used for the control
+make viaphpfs pick the same IP address that is already used for the control
 connection
 .RE
 .RS
@@ -197,11 +194,11 @@ This option requires that the libcurl library was built  with  kerberos4
 support.  This is  not  very common.
 .TP
 .B no_verify_hostname
-(SSL) Curlftpfs will not verify the hostname when connecting to a SSL enabled
+(SSL) Viaphpfs will not verify the hostname when connecting to a SSL enabled
 server.
 .TP
 .B no_verify_peer
-(SSL) Curlftpfs will not verify the certificate when connecting to a SSL
+(SSL) Viaphpfs will not verify the certificate when connecting to a SSL
 enabled server.
 .TP
 .B pass=<password>
@@ -222,7 +219,7 @@ exact same way as the proxy environment  variables,  including protocol prefix
 (http://) and embedded user + password.
 .TP
 .B proxytunnel
-Tells curlftpfs to use a tunnel proxy. This option is implied by the 
+Tells viaphpfs to use a tunnel proxy. This option is implied by the 
 \fBproxy\fP option but you need to set it manually if you use the \fIproxy\fP
 environment variable.
 .TP
@@ -231,25 +228,25 @@ Tells curl to pick a suitable authentication method when  communicating  with
 the  given  proxy.  This  will  cause  an  extra request/response round-trip.
 .TP
 .B proxy_basic
-Tells curlftpfs to use HTTP Basic authentication when communicating with the
-given proxy. Basic is the default authentication method curlftpfs is used with
+Tells viaphpfs to use HTTP Basic authentication when communicating with the
+given proxy. Basic is the default authentication method viaphpfs is used with
 proxies.
 .TP
 .B proxy_digest
-Tells  curlftpfs to use HTTP Digest authentication when communicating with the
+Tells  viaphpfs to use HTTP Digest authentication when communicating with the
 given proxy.
 .TP
 .B proxy_ntlm
-Tells curlftpfs to use HTTP NTLM  authentication  when  communicating with the
+Tells viaphpfs to use HTTP NTLM  authentication  when  communicating with the
 given proxy.
 .TP
 .B proxy_user=<user:password>
 Specify user and password to use for proxy authentication.
 .TP
 .B skip_pasv_ip
-Tell curlftpfs to not use the IP address the server suggests in its response
-to curlftpfs's PASV command when curlftpfs connects the data connection.
-Instead curlftpfs will re-use the same IP address it already uses for the
+Tell viaphpfs to not use the IP address the server suggests in its response
+to viaphpfs PASV command when viaphpfs connects the data connection.
+Instead viaphpfs will re-use the same IP address it already uses for the
 control connection.
 .TP
 .B socks4
@@ -259,17 +256,17 @@ Set the proxy type to SOCKS4.
 Set the proxy type to SOCKS5.
 .TP
 .B ssl
-Make curlftpfs use SSL/TLS for both control and data connections.
+Make viaphpfs use SSL/TLS for both control and data connections.
 .TP
 .B sslv3
-Forces curlftpfs to use SSL version 3 when negotiating with a remote SSL
+Forces viaphpfs to use SSL version 3 when negotiating with a remote SSL
 server.
 .TP
 .B ssl_control
-Make curlftpfs use SSL/TLS only for the control connection.
+Make viaphpfs use SSL/TLS only for the control connection.
 .TP
 .B ssl_try
-Curlftpfs will try to use SSL/TLS for both the control and data connections
+Viaphpfs will try to use SSL/TLS for both the control and data connections
 but if the server doesn't support it, it will still connect unencrypted.
 .TP
 .B tcp_nodelay
@@ -277,13 +274,13 @@ Turn on the TCP_NODELAY option. See the \fIcurl_easy_setopt(3)\fP man page for
 details about this option.
 .TP
 .B tlsv1
-(SSL) Forces curlftpfs to use TLS version 1 when negotiating with a remote TLS
+(SSL) Forces viaphpfs to use TLS version 1 when negotiating with a remote TLS
 server.
 .TP
 .B transform_symlinks
 Append
 .I path
-to the absolute symlinks so that they still point inside the ftp directory
+to the absolute symlinks so that they still point inside the http directory
 structure. Otherwise those links will very probably be broken.
 .TP
 .B user=<user:password>
@@ -299,7 +296,7 @@ beginning of file list transfer.
 Enable FUSE debug output. Implies \fB-f\fP.
 .TP
 .B "-f"
-Run curlftpfs in foreground mode.
+Run viaphpfs in foreground mode.
 .TP
 .B "-r"
 Mount read-only.
@@ -360,8 +357,8 @@ set file permissions (octal)
 .B use_ino
 let filesystem set inode numbers
 .SH AUTHORS
-Robson Braga Araujo is the author and maintainer of CurlFtpFS.
+Mehdi Bouaziz is the author and maintainer of ViaPhpFS.
 .SH WWW
-http://curlftpfs.sourceforge.net
+http://mehdi.bouaziz.me/viaphpfs
 .SH "SEE ALSO"
 .BR mount (8)
